# code-wiki

./: .gitattributes  .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  READEME.md  README.md  REFACTOR.md  REQUIREMENTS.md  reasonix.toml  setup_env.sh  start.bat
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
backend/: config.py  main.py  requirements.txt
backend/models/: entities.py  response_models.py
backend/repositories/: analysis_repo.py
backend/routes/: chat.py  config.py  diagrams.py  events.py  files.py  graph.py  guide.py  health.py  llm_test.py  metrics.py  scan.py  schema.py  status.py  tour.py  watcher.py  wiki.py
backend/services/: analyzer.py  ast_chunker.py  call_graph.py  cfg_service.py  chat_service.py  chunker.py  code_search.py  data_flow.py  dependency_graph.py  embedder.py  embedding_client.py  health_metrics.py  hybrid_search.py  impact_analyzer.py  impact_service.py  index_manager.py  knowledge_graph.py  langchain_chat.py  mermaid_utils.py  reranker.py  scanner.py  search.py  search_service.py  tree_sitter_parser.py  ts_analyzer.py  vector_store.py  vector_store_faiss.py  watcher.py  wiki_generator.py
code-wiki-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  test2.mjs  test_render.mjs  tsconfig.app.json  vite.config.ts
code-wiki-frontend/src/: App.tsx
code-wiki-frontend/src-tauri/: Cargo.toml  tauri.conf.json
code-wiki-frontend/src-tauri/icons/: icon.icns
code-wiki-frontend/src-tauri/src/: main.rs
docs/compiler/: cfg-principle.md
scripts/: check.sh
(+39 files in other folders)
