[package]
name = "code-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", optional = true }
rfd = "0.14"

[features]
default = ["notify"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
